--- a/src/index.css
+++ b/src/index.css
@@ -487,6 +487,21 @@ button {
 	margin-top: 2rem;
 }
 
+.noMoreListings {
+	cursor: default;
+	width: 8rem;
+	margin: 0 auto;
+	text-align: center;
+	padding: 0.25rem 0.5rem;
+	background-color: #000000;
+	color: #ffffff;
+	font-weight: 600;
+	border-radius: 1rem;
+	opacity: 0.7;
+	margin-top: 2rem;
+	width: 15vw;
+}
+
 .listingDetails {
 	margin-bottom: 10rem;
 }
